src/objects/TSS_Response__c.object
<CustomObject>
    <description>This is created for TSS Application - Survey responses</description>
    <fields>
        <fullName>FY__c</fullName>
        <formula>TEXT(TSS_Survey__r.FY__c)</formula>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Highly_Satisfied__c</fullName>
        <formula>IF(OR(Response_Score__c = 4,Response_Score__c = 5),1, NULL)</formula>
        <label>Hidden Highly Satisfied?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Code_Plus__c</fullName>
        <formula>TSS_Survey__r.TSS_Result_Action_Plan__r.Location_Code_Plus__c</formula>
        <label>Location Code Plus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Score__c</fullName>
        <label>Satisfaction Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Text__c</fullName>
        <label>Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quality of Cleanliness</fullName>
                </value>
                <value>
                    <fullName>Condition of Facility</fullName>
                </value>
                <value>
                    <fullName>Personal Workspace</fullName>
                </value>
                <value>
                    <fullName>Elevators</fullName>
                </value>
                <value>
                    <fullName>Know who to call Building Issues</fullName>
                </value>
                <value>
                    <fullName>Overall Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Meeting Space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TSS_Survey__c</fullName>
        <label>TSS Survey</label>
        <referenceTo>TSS_Survey__c</referenceTo>
        <relationshipLabel>TSS Responses</relationshipLabel>
        <relationshipName>TSS_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_of_Response__c</fullName>
        <label>Type of Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scale</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TSS Response</label>
    <nameField>
        <label>TSS Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TSS Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>